# gamagama-cli

./: CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  gg  mkdocs.yml  pip install .  pyproject.toml
docs/: command-architecture.md  commands.md  concepts.md  getting-started.md  index.md  interactive-mode.md
gamagama/: __init__.py  main.py
gamagama/commands/: __init__.py  base.py
gamagama/commands/help/: __init__.py
gamagama/commands/player/: __init__.py
gamagama/commands/quit/: __init__.py
gamagama/commands/roll/: __init__.py
gamagama/commands/version/: __init__.py
gamagama/core/: __init__.py  completer.py  main.py  parsers.py  session.py
gamagama/core/registry/: __init__.py  builder.py  node.py  tree.py
gamagama/core/tree/: __init__.py  branch.py  leaf.py  map_branch.py  node.py  seq_branch.py  tree.py  visitor.py
src/gamagama/characters/: store.py
src/gamagama/cli/: __init__.py
src/gamagama/commands/: __init__.py  base.py
src/gamagama/core/: completer.py  config.py  domain.py  main.py  session.py
src/gamagama/systems/: __init__.py  base.py  dice.py  rolemaster.py
tests/: conftest.py  test_commands.py  test_main.py
tests/characters/: test_character.py  test_store.py
tests/commands/: test_help.py  test_navigation.py  test_player.py  test_quit.py  test_roll.py  test_schema.py  test_system.py  test_verbs.py
tests/core/: test_completer.py  test_domain.py  test_interactive.py  test_main_logic.py  test_session.py
tests/systems/: test_rolemaster.py
tests/tree/: __init__.py  test_structure.py  test_tree.py  test_visitor.py
(+38 files in other folders)
