[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gamagama"
version = "0.1.0"
description = "A Game Master Game Manager for tabletop RPGs."
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
gamagama = "gamagama.core.main:run"
gg = "gamagama.core.main:run"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
