[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gamagama-cli"
version = "0.1.0"
description = "A Game Master Game Manager for tabletop RPGs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["gamagama-core"]

[project.scripts]
gg-cli = "gamagama.cli.core.main:run"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["src"]
